# trasgoDP

./: .gitignore  .readthedocs.yml  CHANGELOG.md  README.md  pyproject.toml  test-requirements.txt  tox.ini
.github/: cicd.yml
.github/workflows/: .codecov.yml  cicd.yml  codecov.yml  pypi.yml
docs/: modules.rst  trasgodp.categorical.rst  trasgodp.metrics.rst  trasgodp.numerical.rst  trasgodp.rst
docs/source/: conf.py  getting_started.rst  index.rst  install.rst  intro.rst  ldp.categorical.rst  ldp.numerical.rst  ldp.rst  modules.rst  trasgodp.rst
ldp/categorical/: _exponential.py
ldp/numerical/: _gaussian.py  _laplace.py
tests/: __init__.py  test_unitary.py
trasgodp/: __init__.py
trasgodp/categorical/: __init__.py  _randomized_response.py
trasgodp/metrics/: __init__.py  _utility_loss.py
trasgodp/numerical/: __init__.py  _laplace.py
