[tool.poetry]
name = "trasgoDP"
version = "0.0.1"
description = "Local differential privacy mechanisms"
authors = [
    "Judith Sáinz-Pardo Díaz <sainzpardo@ifca.unican.es>",
    "Álvaro López García <aloga@ifca.unican.es>"
]
maintainers = ["Judith Sáinz-Pardo Díaz <sainzpardo@ifca.unican.es>"]
license = "Apache License 2.0"
readme = "README.md"
repository = "https://github.com/judithspd/siesta-ldp"
keywords = ["data", "privacy", "differential-privacy"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Security"
]


[tool.poetry.dependencies]
python = "^3.10"
numpy = "2.2.6"
pandas = "2.3.3"
typing_extensions = "4.15.0"


[tool.poetry.group.dev.dependencies]
tox = "4.16.0"


[tool.poetry.group.test.dependencies]
pytest = ">=7.1.2,<10.0.0"
pytest-cov = ">=4,<8"


[tool.poetry.group.test-flake8.dependencies]
flake8 = ">=4,<8"
flake8-bugbear = ">=22.3,<25.0"
flake8-docstrings = "^1.6"
flake8-typing-imports = "^1.12"
flake8-colors = "^0.1"
pep8-naming = ">=0.12,<0.16"
pydocstyle = "^6.1"


[tool.poetry.group.test-black.dependencies]
black = ">=22.3,<27.0"


[tool.poetry.group.test-bandit.dependencies]
bandit = "1.8.6"


[tool.poetry.group.test-pip-missing-reqs.dependencies]
pip-check-reqs = "^2.5.3"


[tool.poetry.group.test-mypy.dependencies]
mypy = "1.17.1"


[tool.poetry.group.test-pypi.dependencies]
twine = ">=4.0.2,<7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
